3er Entrega/Grupo04/y.output
Terminals unused in grammar

   ENDWHILE
   READ_T
   IN_T
   DO_T
   whitespace
   linefeed
   DIGITO
   LETRA
   COMILLA_D
   COMILLA_A
   COMILLA_C
   OP_AVG
   ENDIF


Gramática

    0 $accept: programa_final $end

    1 programa_final: programa

    2 programa: sentencia

    3 sentencia: sentencia grammar SEP_LINEA
    4          | grammar SEP_LINEA
    5          | sentencia grammar
    6          | grammar
    7          | declaracion
    8          | sentencia declaracion

    9 sentenciaCuerpo: sentenciaCuerpo grammar SEP_LINEA
   10                | grammar SEP_LINEA
   11                | sentenciaCuerpo grammar
   12                | grammar

   13 grammar: asig
   14        | while
   15        | display
   16        | get
   17        | for
   18        | if

   19 asig: ID_T OP_ASIG expr
   20     | ID_T OP_ASIG const_string_r

   21 while: WHILE_T cond_final LLAVE_A sentenciaCuerpo LLAVE_C

   22 if: IF_T cond_final LLAVE_A sentenciaCuerpo LLAVE_C

   23 $@1: /* vacío */

   24 $@2: /* vacío */

   25 if: IF_T cond_final LLAVE_A sentenciaCuerpo LLAVE_C $@1 ELSE_T LLAVE_A sentenciaCuerpo LLAVE_C $@2

   26 $@3: /* vacío */

   27 if: IF_T equmin LLAVE_A sentenciaCuerpo $@3 LLAVE_C

   28 $@4: /* vacío */

   29 if: IF_T equmax LLAVE_A sentenciaCuerpo $@4 LLAVE_C

   30 display: DISPLAY const_string_r
   31        | DISPLAY expr

   32 get: GET ID_T

   33 const_string_r: CONST_STRING

   34 numero: CONST_INT
   35       | CONST_FLOAT

   36 cond_final: PARENT_A cond_final AND_T cond_final PARENT_C

   37 $@5: /* vacío */

   38 cond_final: PARENT_A cond AND_T $@5 cond PARENT_C

   39 $@6: /* vacío */

   40 cond_final: PARENT_A cond OR_T $@6 cond PARENT_C
   41           | PARENT_A cond PARENT_C
   42           | NOT_T cond_final
   43           | PARENT_A cond_final PARENT_C

   44 cond: expr OP_DISTINTO termino
   45     | expr OP_IGUAL termino
   46     | expr OP_MAYOR termino
   47     | expr OP_MAYORIGUAL termino
   48     | expr OP_MENOR termino
   49     | expr OP_MENORIGUAL termino
   50     | expr OR_T termino
   51     | expr AND_T termino
   52     | expr NOT_T termino

   53 expr: expr OP_SUM termino
   54     | expr OP_MENOS termino
   55     | termino

   56 termino: termino OP_MUL factor
   57        | termino OP_DIVISION factor
   58        | termino OP_MOD factor
   59        | termino OP_DIV factor
   60        | '-' termino
   61        | factor

   62 $@7: /* vacío */

   63 for: FOR ID_T OP_ASIG expr TO expr CORCH_A CONST_INT CORCH_C $@7 sentencia NEXT ID_T

   64 $@8: /* vacío */

   65 for: FOR ID_T OP_ASIG expr TO expr $@8 sentencia NEXT ID_T

   66 $@9: /* vacío */

   67 equmax: EQUMAX PARENT_A expr $@9 SEP_LINEA CORCH_A lista CORCH_C PARENT_C

   68 $@10: /* vacío */

   69 equmin: EQUMIN PARENT_A expr $@10 SEP_LINEA CORCH_A lista CORCH_C PARENT_C

   70 lista: expr
   71      | lista COMA expr

   72 factor: PARENT_A expr PARENT_C
   73       | numero
   74       | ID_T

   75 declaracion: DIM CORCH_A dupla_asig CORCH_C

   76 dupla_asig: ID_T COMA dupla_asig COMA tipo
   77           | ID_T CORCH_C AS CORCH_A tipo

   78 tipo: FLOAT_T
   79     | INT_T
   80     | STRING
   81     | CHAR


Terminales con las reglas donde aparecen

$end (0) 0
'-' (45) 60
error (256)
WHILE_T (258) 21
ENDWHILE (259)
DISPLAY (260) 30 31
GET (261) 32
READ_T (262)
FLOAT_T (263) 78
INT_T (264) 79
CHAR (265) 81
IN_T (266)
DO_T (267)
EQUMAX (268) 67
EQUMIN (269) 69
AS (270) 77
STRING (271) 80
FOR (272) 63 65
NEXT (273) 63 65
TO (274) 63 65
whitespace (275)
linefeed (276)
DIGITO (277)
LETRA (278)
COMILLA_D (279)
COMILLA_A (280)
COMILLA_C (281)
CONST_INT (282) 34 63
CONST_FLOAT (283) 35
OP_AVG (284)
CONST_STRING (285) 33
ELSE_T (286) 25
IF_T (287) 22 25 27 29
ENDIF (288)
DIM (289) 75
ID_T (290) 19 20 32 63 65 74 76 77
OP_MENOS (291) 54
OP_SUM (292) 53
OP_DIV (293) 59
OP_DIVISION (294) 57
OP_MUL (295) 56
MENOS_UNARIO (296)
OP_MOD (297) 58
OP_ASIG (298) 19 20 63 65
OP_DISTINTO (299) 44
OP_IGUAL (300) 45
OP_MAYORIGUAL (301) 47
OP_MAYOR (302) 46
OP_MENOR (303) 48
OP_MENORIGUAL (304) 49
OR_T (305) 40 50
AND_T (306) 36 38 51
NOT_T (307) 42 52
LLAVE_C (308) 21 22 25 27 29
LLAVE_A (309) 21 22 25 27 29
PARENT_C (310) 36 38 40 41 43 67 69 72
PARENT_A (311) 36 38 40 41 43 67 69 72
CORCH_A (312) 63 67 69 75 77
CORCH_C (313) 63 67 69 75 77
COMA (314) 71 76
SEP_LINEA (315) 3 4 9 10 67 69


No terminales con las reglas donde aparecen

$accept (62)
    en la izquierda: 0
programa_final (63)
    en la izquierda: 1, en la derecha: 0
programa (64)
    en la izquierda: 2, en la derecha: 1
sentencia (65)
    en la izquierda: 3 4 5 6 7 8, en la derecha: 2 3 5 8 63 65
sentenciaCuerpo (66)
    en la izquierda: 9 10 11 12, en la derecha: 9 11 21 22 25 27 29
grammar (67)
    en la izquierda: 13 14 15 16 17 18, en la derecha: 3 4 5 6 9 10
    11 12
asig (68)
    en la izquierda: 19 20, en la derecha: 13
while (69)
    en la izquierda: 21, en la derecha: 14
if (70)
    en la izquierda: 22 25 27 29, en la derecha: 18
$@1 (71)
    en la izquierda: 23, en la derecha: 25
$@2 (72)
    en la izquierda: 24, en la derecha: 25
$@3 (73)
    en la izquierda: 26, en la derecha: 27
$@4 (74)
    en la izquierda: 28, en la derecha: 29
display (75)
    en la izquierda: 30 31, en la derecha: 15
get (76)
    en la izquierda: 32, en la derecha: 16
const_string_r (77)
    en la izquierda: 33, en la derecha: 20 30
numero (78)
    en la izquierda: 34 35, en la derecha: 73
cond_final (79)
    en la izquierda: 36 38 40 41 42 43, en la derecha: 21 22 25 36
    42 43
$@5 (80)
    en la izquierda: 37, en la derecha: 38
$@6 (81)
    en la izquierda: 39, en la derecha: 40
cond (82)
    en la izquierda: 44 45 46 47 48 49 50 51 52, en la derecha: 38
    40 41
expr (83)
    en la izquierda: 53 54 55, en la derecha: 19 31 44 45 46 47 48
    49 50 51 52 53 54 63 65 67 69 70 71 72
termino (84)
    en la izquierda: 56 57 58 59 60 61, en la derecha: 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60
for (85)
    en la izquierda: 63 65, en la derecha: 17
$@7 (86)
    en la izquierda: 62, en la derecha: 63
$@8 (87)
    en la izquierda: 64, en la derecha: 65
equmax (88)
    en la izquierda: 67, en la derecha: 29
$@9 (89)
    en la izquierda: 66, en la derecha: 67
equmin (90)
    en la izquierda: 69, en la derecha: 27
$@10 (91)
    en la izquierda: 68, en la derecha: 69
lista (92)
    en la izquierda: 70 71, en la derecha: 67 69 71
factor (93)
    en la izquierda: 72 73 74, en la derecha: 56 57 58 59 61
declaracion (94)
    en la izquierda: 75, en la derecha: 7 8
dupla_asig (95)
    en la izquierda: 76 77, en la derecha: 75 76
tipo (96)
    en la izquierda: 78 79 80 81, en la derecha: 76 77


estado 0

    0 $accept: . programa_final $end

    WHILE_T  desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    FOR      desplazar e ir al estado 4
    IF_T     desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6
    ID_T     desplazar e ir al estado 7

    programa_final  ir al estado 8
    programa        ir al estado 9
    sentencia       ir al estado 10
    grammar         ir al estado 11
    asig            ir al estado 12
    while           ir al estado 13
    if              ir al estado 14
    display         ir al estado 15
    get             ir al estado 16
    for             ir al estado 17
    declaracion     ir al estado 18


estado 1

   21 while: WHILE_T . cond_final LLAVE_A sentenciaCuerpo LLAVE_C

    NOT_T     desplazar e ir al estado 19
    PARENT_A  desplazar e ir al estado 20

    cond_final  ir al estado 21


estado 2

   30 display: DISPLAY . const_string_r
   31        | DISPLAY . expr

    CONST_INT     desplazar e ir al estado 22
    CONST_FLOAT   desplazar e ir al estado 23
    CONST_STRING  desplazar e ir al estado 24
    ID_T          desplazar e ir al estado 25
    PARENT_A      desplazar e ir al estado 26
    '-'           desplazar e ir al estado 27

    const_string_r  ir al estado 28
    numero          ir al estado 29
    expr            ir al estado 30
    termino         ir al estado 31
    factor          ir al estado 32


estado 3

   32 get: GET . ID_T

    ID_T  desplazar e ir al estado 33


estado 4

   63 for: FOR . ID_T OP_ASIG expr TO expr CORCH_A CONST_INT CORCH_C $@7 sentencia NEXT ID_T
   65    | FOR . ID_T OP_ASIG expr TO expr $@8 sentencia NEXT ID_T

    ID_T  desplazar e ir al estado 34


estado 5

   22 if: IF_T . cond_final LLAVE_A sentenciaCuerpo LLAVE_C
   25   | IF_T . cond_final LLAVE_A sentenciaCuerpo LLAVE_C $@1 ELSE_T LLAVE_A sentenciaCuerpo LLAVE_C $@2
   27   | IF_T . equmin LLAVE_A sentenciaCuerpo $@3 LLAVE_C
   29   | IF_T . equmax LLAVE_A sentenciaCuerpo $@4 LLAVE_C

    EQUMAX    desplazar e ir al estado 35
    EQUMIN    desplazar e ir al estado 36
    NOT_T     desplazar e ir al estado 19
    PARENT_A  desplazar e ir al estado 20

    cond_final  ir al estado 37
    equmax      ir al estado 38
    equmin      ir al estado 39


estado 6

   75 declaracion: DIM . CORCH_A dupla_asig CORCH_C

    CORCH_A  desplazar e ir al estado 40


estado 7

   19 asig: ID_T . OP_ASIG expr
   20     | ID_T . OP_ASIG const_string_r

    OP_ASIG  desplazar e ir al estado 41


estado 8

    0 $accept: programa_final . $end

    $end  desplazar e ir al estado 42


estado 9

    1 programa_final: programa .

    $default  reduce usando la regla 1 (programa_final)


estado 10

    2 programa: sentencia .
    3 sentencia: sentencia . grammar SEP_LINEA
    5          | sentencia . grammar
    8          | sentencia . declaracion

    WHILE_T  desplazar e ir al estado 1
    DISPLAY  desplazar e ir al estado 2
    GET      desplazar e ir al estado 3
    FOR      desplazar e ir al estado 4
    IF_T     desplazar e ir al estado 5
    DIM      desplazar e ir al estado 6
    ID_T     desplazar e ir al estado 7

    $default  reduce usando la regla 2 (programa)

    grammar      ir al estado 43
    asig         ir al estado 12
    while        ir al estado 13
    if           ir al estado 14
    display      ir al estado 15
    get          ir al estado 16
    for          ir al estado 17
    declaracion  ir al estado 44


estado 11

    4 sentencia: grammar . SEP_LINEA
    6          | grammar .

    SEP_LINEA  desplazar e ir al estado 45

    $default  reduce usando la regla 6 (sentencia)


estado 12

   13 grammar: asig .

    $default  reduce usando la regla 13 (grammar)


estado 13

   14 grammar: while .

    $default  reduce usando la regla 14 (grammar)


estado 14

   18 grammar: if .

    $default  reduce usando la regla 18 (grammar)


estado 15

   15 grammar: display .

    $default  reduce usando la regla 15 (grammar)


estado 16

   16 grammar: get .

    $default  reduce usando la regla 16 (grammar)


estado 17

   17 grammar: for .

    $default  reduce usando la regla 17 (grammar)


estado 18

    7 sentencia: declaracion .

    $default  reduce usando la regla 7 (sentencia)


estado 19

   42 cond_final: NOT_T . cond_final

    NOT_T     desplazar e ir al estado 19
    PARENT_A  desplazar e ir al estado 20

    cond_final  ir al estado 46


estado 20

   36 cond_final: PARENT_A . cond_final AND_T cond_final PARENT_C
   38           | PARENT_A . cond AND_T $@5 cond PARENT_C
   40           | PARENT_A . cond OR_T $@6 cond PARENT_C
   41           | PARENT_A . cond PARENT_C
   43           | PARENT_A . cond_final PARENT_C

    CONST_INT    desplazar e ir al estado 22
    CONST_FLOAT  desplazar e ir al estado 23
    ID_T         desplazar e ir al estado 25
    NOT_T        desplazar e ir al estado 19
    PARENT_A     desplazar e ir al estado 47
    '-'          desplazar e ir al estado 27

    numero      ir al estado 29
    cond_final  ir al estado 48
    cond        ir al estado 49
    expr        ir al estado 50
    termino     ir al estado 31
    factor      ir al estado 32


estado 21

   21 while: WHILE_T cond_final . LLAVE_A sentenciaCuerpo LLAVE_C

    LLAVE_A  desplazar e ir al estado 51


estado 22

   34 numero: CONST_INT .

    $default  reduce usando la regla 34 (numero)


estado 23

   35 numero: CONST_FLOAT .

    $default  reduce usando la regla 35 (numero)


estado 24

   33 const_string_r: CONST_STRING .

    $default  reduce usando la regla 33 (const_string_r)


estado 25

   74 factor: ID_T .

    $default  reduce usando la regla 74 (factor)


estado 26

   72 factor: PARENT_A . expr PARENT_C

    CONST_INT    desplazar e ir al estado 22
    CONST_FLOAT  desplazar e ir al estado 23
    ID_T         desplazar e ir al estado 25
    PARENT_A     desplazar e ir al estado 26
    '-'          desplazar e ir al estado 27

    numero   ir al estado 29
    expr     ir al estado 52
    termino  ir al estado 31
    factor   ir al estado 32


estado 27

   60 termino: '-' . termino

    CONST_INT    desplazar e ir al estado 22
    CONST_FLOAT  desplazar e ir al estado 23
    ID_T         desplazar e ir al estado 25
    PARENT_A     desplazar e ir al estado 26
    '-'          desplazar e ir al estado 27

    numero   ir al estado 29
    termino  ir al estado 53
    factor   ir al estado 32


estado 28

   30 display: DISPLAY const_string_r .

    $default  reduce usando la regla 30 (display)


estado 29

   73 factor: numero .

    $default  reduce usando la regla 73 (factor)


estado 30

   31 display: DISPLAY expr .
   53 expr: expr . OP_SUM termino
   54     | expr . OP_MENOS termino

    OP_MENOS  desplazar e ir al estado 54
    OP_SUM    desplazar e ir al estado 55

    $default  reduce usando la regla 31 (display)


estado 31

   55 expr: termino .
   56 termino: termino . OP_MUL factor
   57        | termino . OP_DIVISION factor
   58        | termino . OP_MOD factor
   59        | termino . OP_DIV factor

    OP_DIV       desplazar e ir al estado 56
    OP_DIVISION  desplazar e ir al estado 57
    OP_MUL       desplazar e ir al estado 58
    OP_MOD       desplazar e ir al estado 59
